--- a/blog-website/package.json
+++ b/blog-website/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-html5video": "^2.5.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
     "react-syntax-highlighter": "^15.6.1"
   },
