--- a/blog-website/package.json
+++ b/blog-website/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.453.0",
+    "markdown-to-jsx": "^7.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-html5video": "^2.5.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
