--- a/blog-website/package.json
+++ b/blog-website/package.json
@@ -21,7 +21,9 @@
     "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.1",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "remark-slug": "^7.0.1",
+    "remark-toc": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
